# high-performance-computing-lab

./: .gitignore  GameOfLife.c  Logbuch.odt  README.md  game_of_life_jannik.c  makefile
lab1/: gameoflife_template.c  gol
lab1/all_in_one/: CMakeLists.txt  Makefile  field.c  field.h  filling.c  main.c  simdata.c  vtk.c  vtk.h  vtk2png.c
lab1/all_in_one/sweeps/: add.c  add.h  gameoflife.c  gameoflife.h  mandelbrot.c  mandelbrot.h
lab3/: CMakeLists.txt  Makefile  compile_and_run.sh  examples.c  field.c  field.h  filling.c  filling.h  hpc.mpi  hpc.omp  main.c  mpidata.c  mpidata.h  simdata.c  simdata.h  vtk.c  vtk.h  vtk2png
lab3/sweeps/: add.c  gameoflife.c  gameoflife.h  heat.c  heat.h  mandelbrot.c  mandelbrot.h
